src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-nested-weaker-req.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "third-party2",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [
    {
      "name": "transitive-third-party1",
      "version": "10.0.0"
    },
    {
      "name": "third-party1",
      "version": "10.0.0"
    }
  ],
  "vetted_with_exemptions": []
}
