src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-nested-weaker-req.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (1 fully audited, 2 partially audited)

