src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-overbroad.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (5 fully audited, 1 exempted)

