src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-partial-twins.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "third-core",
      "version": "5.0.0"
    },
    {
      "name": "thirdA",
      "version": "10.0.0"
    },
    {
      "name": "thirdAB",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [],
  "vetted_with_exemptions": [
    {
      "name": "third-core",
      "version": "10.0.0"
    }
  ]
}
