src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-partial-twins.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Succeeded (3 fully audited, 1 exempted)

