src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-twins.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "thirdA",
      "version": "10.0.0"
    },
    {
      "name": "thirdAB",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [],
  "vetted_with_exemptions": [
    {
      "name": "third-core",
      "version": "5.0.0"
    },
    {
      "name": "third-core",
      "version": "10.0.0"
    }
  ]
}
