src/tests/snapshots/cargo_vet__tests__vet__builtin_simple_foreign_dep_criteria_fail.snap
---
source: src/tests/vet.rs
expression: output
---
Vetting Failed!

1 unvetted dependencies:
  transitive-third-party1:10.0.0 missing ["peer-company::reviewed"]

recommended audits for peer-company::reviewed:
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

