src/tests/snapshots/cargo_vet__tests__vet__mock-complex-core10-partially-too-weak-via-strong-delta.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  third-core:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    Command                             Publisher  Used By                      Audit Size
    cargo vet inspect third-core 5.0.0  UNKNOWN    firstB, thirdA, and thirdAB  25 lines

estimated audit backlog: 25 lines

Use |cargo vet certify| to record the audits.

